--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<form action="/users/new" method="get" accept-charset="UTF-8">
+<form action="/users" method="post" accept-charset="UTF-8">
     <input type="text" name="username">
     <input type="email" name="email">
     <input type="password" name="password">
