--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <form action="/users" method="post" accept-charset="UTF-8">
-    <input type="text" name="username">
-    <input type="email" name="email">
-    <input type="password" name="password">
+    <input type="text" name="user[username]">
+    <input type="email" name="user[email]">
+    <input type="password" name="user[password]">
 
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
