--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% if false %>
 <form action="/users" method="post" accept-charset="UTF-8">
     <input type="text" name="user[username]">
     <input type="email" name="user[email]">
@@ -8,3 +9,13 @@
     <!-- other inputs here -->
     <input type="submit" value="Submit This Form">
 </form>
+<% end %>
+
+<%= form_for :user, url: '/users', method: :post do |form| %>
+    <%= form.text_field :username, placeholder: "Your name here"%>
+    <%= form.email_field :email, placeholder: "Your email here" %>
+    <%= form.password_field :password, placeholder: "Enter a secure password (of at least 8 characters)" %>
+    <%= form.submit "Create" %>
+  <% end %>
+
+
