--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+form {
+background-color: rgba(235, 236, 236, 0.568);
+margin: 2% auto;
+width: 90%;
+}
+input {
+  display: flex;
+  border: 1px solid rgba(146, 146, 146, 0.705);
+  width: 50%;
+  min-width: 150px;
+  margin: 0 auto;
+}
