--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,10 +12,18 @@
 <% end %>
 
 <%= form_for :user, url: '/users', method: :post do |form| %>
+    <ul>
     <%= form.text_field :username, placeholder: "Your name here"%>
+  </ul>
+  <ul>
     <%= form.email_field :email, placeholder: "Your email here" %>
+  </ul>
+  <ul>
     <%= form.password_field :password, placeholder: "Enter a secure password (of at least 8 characters)" %>
-    <%= form.submit "Create" %>
-  <% end %>
+  </ul>
+  <ul>
+    <%= form.submit "Create new user" %>
+  </ul>
+<% end %>
 
 
