--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :user, url: '/users', method: :post do |form| %>
+<%= form_for :user, url: edit_users_path, method: :post do |form| %>
   <ul>
     <%= form.text_field :username, placeholder: "Your name here"%>
   </ul>
