--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,24 @@
-<%= form_for :user, url: edit_users_path, method: :post do |form| %>
+<% if false %>
+<form action="/users" method="post" accept-charset="UTF-8">
+    <input type="text" name="user[username]" placeholder='Your username (of at least 4 characters) here.'>
+    <input type="email" name="user[email]" placeholder='Your email here. It must be a valid email and of at least 10 characters.'>
+    <input type="password" name="user[password]" placeholder='Your password here (at least 8 characters).'>
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="submit" value="Edit this user">
+</form>
+
+<%= form_tag(users_path, :method => "post") do %>
+  <%= label_tag 'username' %>
+  <%= text_field_tag(:username) %><br/>
+  <%= label_tag 'email' %>
+  <%= text_field_tag(:email) %><br/>
+  <%= label_tag 'password' %>
+  <%= password_field_tag 'password' %><br/>
+  <%= submit_tag 'Edit this user'%>
+<% end %>
+<% end %>
+
+<%= form_for :user, url: users_path, method: :post do |form| %>
   <ul>
     <%= form.text_field :username, placeholder: "Your name here"%>
   </ul>
@@ -9,6 +29,6 @@
     <%= form.password_field :password, placeholder: "Enter a secure password (of at least 8 characters)" %>
   </ul>
   <ul>
-    <%= form.submit "Edit" %>
+    <%= form.submit "Edit this user" %>
   </ul>
 <% end %>
