--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,4 +31,6 @@
   <ul>
     <%= form.submit "Edit this user" %>
   </ul>
+  <br>
+  <%= link_to "Do you want to create an user instead?", new_users_path(@user)%>
 <% end %>
