--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,4 +31,6 @@
   <ul>
     <%= form.submit "Create new user" %>
   </ul>
+  <br>
+  <%= link_to "Do you want to edit an user instead?", edit_users_path(@user)%>
 <% end %>
