Fix stylelint errors

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -21,8 +21,7 @@ label {
   width: 50%;
   background-color: rgba(240, 240, 240, 0.918);
   margin: 0 auto;
-  text-align: middle;
-  color: rgba(31, 31, 31, 0.582)
+  color: rgba(31, 31, 31, 0.582);
 }
 
 a {
