--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,5 +36,5 @@
     <%= form.submit "Create new user" %>
   </ul>
   <br>
-  <%= link_to "Do you want to edit an user instead?", edit_users_path(@user)%>
+  <%# <%= link_to "Do you want to edit an user instead?", edit_users_path(@user)%>
 <% end %>
