--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%#<form action="/users" method="post" accept-charset="UTF-8">
+<%# <form action="/users" method="post" accept-charset="UTF-8">
     <input type="text" name="user[username]" placeholder='Your username (of at least 4 characters) here.'>
     <input type="email" name="user[email]" placeholder='Your email here. It must be a valid email and of at least 10 characters.'>
     <input type="password" name="user[password]" placeholder='Your password here (at least 8 characters).'>
@@ -17,9 +17,7 @@
 <%# <% end %>
 <%# <% end %>
 
-<%= 
-
-<%= form_for :user, :url => { :action => :update, :id => @user.id } do |form| %>
+<%= form_for :user do |form| %>
     <% flash.each do |type, msg| %>
       <div class="flash-message">
         <%= msg %>
@@ -27,7 +25,7 @@
     <% end %>
 
   <ul>
-    <%= form.text_field :username, placeholder: "Your name here"%>
+    <%= form.text_field :username, placeholder: "Your name here" %>
   </ul>
   <ul>
     <%= form.email_field :email, placeholder: "Your email here" %>
@@ -39,5 +37,4 @@
     <%= form.submit "Edit this user" %>
   </ul>
   <br>
-  <%= link_to "Do you want to create an user instead?", new_users_path(@user)%>
 <% end %>
