--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,24 +17,23 @@
 <%# <% end %>
 <%# <% end %>
 
-<%= form_for :user do |form| %>
+<%= form_for(@user) do |f| %>
     <% flash.each do |type, msg| %>
       <div class="flash-message">
         <%= msg %>
       </div>
     <% end %>
-
   <ul>
-    <%= form.text_field :username, placeholder: "Your name here" %>
+    <%= f.text_field :username, placeholder: "Your name here" %>
   </ul>
   <ul>
-    <%= form.email_field :email, placeholder: "Your email here" %>
+    <%= f.email_field :email, placeholder: "Your email here" %>
   </ul>
   <ul>
-    <%= form.password_field :password, placeholder: "Enter a secure password (of at least 8 characters)" %>
+    <%= f.password_field :password, placeholder: "Enter a secure password (of at least 8 characters)" %>
   </ul>
   <ul>
-    <%= form.submit "Edit this user" %>
+    <%= f.submit "Edit this user" %>
   </ul>
   <br>
 <% end %>
